projects/compiler/test/typechecker/import/error_assignment_to_aliased_imported_variable.out
Error at %FILE_NAME%:3:5
Cannot assign to member 'a'
  |  exp.a = 456
         ^
'a' is an import, which cannot be overwritten
