projects/compiler/test/typechecker/import/error_assignment_to_aliased_imported_variable.abra
import "./_exports" as exp

exp.a = 456
